--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,10 @@
       href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.css"
       type="text/css"
     />
-    <title>React course</title>
+    <title>CIMS Digita Twin</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- <div id="bim-root"></div> -->
   </body>
 </html>
